exo: Drop window on touch release

Windows were not dropped after dragging using touch, resulting in broken
input due to unreleased capture. Phantom windows in extended desktop
mode would also stick around.

BUG=738200
TEST=Phantom windows disappear on touch release.

Review-Url: https://codereview.chromium.org/2968593002
Cr-Commit-Position: refs/heads/master@{#483870}

Former-commit-id: d60a4c6e0cbe7ed72a141f61b74c7dd10a927212